Move portfolio dir to projects.
Also update mark-it-down project page/image.

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@ article_header:
         - text: Blog
           type: outline-theme-dark
           url: blog/ 
-        - text: Portfolio
+        - text: Projects
           type: outline-theme-dark
-          url: portfolio/
+          url: projects/
         - text: About Me
           type: outline-theme-dark 
           url: about/
